<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M-Crowdsourcing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ProfileView">View Profile</string>

    <!-- three profile fields -->
    <string name="country_of_residence">Country of Residence: </string>
    <string name="mturk_username">Mechanical Turk Username: </string>
    <string name="name">Name of User: </string>


    <string name="title_activity_hit">HITActivity</string>

    <string name="hit_name">Name of the HIT</string>
    <string name="hit_author">Creator of the HIT</string>
    <string name="hit_description">Description</string>
    <string name="hit_answer">User\'s Answer:</string>
    <string name="title_activity_login">login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_change_info">Change Information</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_activity_edit_account">EditAccountActivity</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_hitpreview">HITPreviewActivity</string>

</resources>
