<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:text="@string/ProfileView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

    <TextView android:text="@string/country_of_residence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView android:text="@string/mturk_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

    <Button
        android:id="@+id/change_info"

        android:textColor="#5E45FF"
        android:textSize="18sp"
        android:text="Edit"
        android:onClick="onEditClick"

        android:layout_width="160dp"
        android:layout_height="58dp"
        android:background="@drawable/buttonshape"

        android:layout_centerHorizontal="true"/>



</LinearLayout>