<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.steven.finalproject.SignupActivity"
    android:orientation="vertical">
    <EditText android:id="@+id/signup_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@color/entry_text"/>
    <EditText android:id="@+id/signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/entry_text"/>
    <EditText android:id="@+id/signup_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/country_of_residence"
        android:textColor="@color/entry_text"/>


    <Button
        android:id="@+id/signup_button_signup"

        android:textColor="#5E45FF"
        android:textSize="18sp"
        android:text="Sign Up"
        android:onClick="onSignupClick"

        android:layout_width="160dp"
        android:layout_height="58dp"
        android:background="@drawable/buttonshape"/>

    <Button
        android:id="@+id/back_to_login_button"

        android:textColor="#5E45FF"
        android:textSize="18sp"
        android:text="Back to Log In"
        android:onClick="onBack"

        android:layout_width="160dp"
        android:layout_height="58dp"
        android:background="@drawable/buttonshape"/>


    <TextView android:id="@+id/signup_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ></TextView>


</LinearLayout>
